--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,7 +1,10 @@
 
 <p>{{date | date:'short'}}</p>
 <h2>{{grestings | async}}</h2>
-<div class="products_container" *ngFor="let products of product">
+<label for="search">Search Prodcut</label><br>
+<input [(ngModel)]="category"/>
+
+<div class="products_container" *ngFor="let products of product |filter:category">
     <div class="products_content">
         <img src="{{products.image}}"alt="">
         <h1>{{products.name | uppercase}}</h1>
